[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-platform"
version = "1.0.0"
description = "Production-ready multi-agent AI system using LangGraph, LLMs, and MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Agentic AI Team", email = "team@agentic-ai.local"}
]
keywords = [
    "multi-agent",
    "AI",
    "LangGraph",
    "LLM",
    "MCP",
    "incident-response",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.30.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=2.0",
]

vector-db = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

llm-extras = [
    "openai>=1.30.0",
]

[project.urls]
Documentation = "docs/"
Repository = "."

[tool.setuptools]
packages = ["agentic_ai_platform"]

[tool.setuptools.package-data]
agentic_ai_platform = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=agentic_ai_platform --cov-report=html"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0913",           # Too many arguments
    "R0914",           # Too many local variables
    "W0212",           # Protected access
]
